@@ -534,6 +534,7 @@ public class SamIam implements IamProviderInterface {
               entry ->
                   new SamPolicyModel()
                       .name(entry.getPolicyName())
+                      .email(entry.getEmail())
                       .members(entry.getPolicy().getMemberEmails())
                       .memberPolicies(
                           Optional.ofNullable(entry.getPolicy().getMemberPolicies())
@@ -546,8 +547,8 @@ public class SamIam implements IamProviderInterface {
                                           .policyEmail(pid.getPolicyEmail())
                                           .resourceId(UUID.fromString(pid.getResourceId()))
                                           .resourceTypeName(pid.getResourceTypeName()))
-                              .collect(Collectors.toList())))
-          .collect(Collectors.toList());
+                              .toList()))
+          .toList();
     }
   }
 
@@ -555,46 +556,29 @@ public class SamIam implements IamProviderInterface {
   public Map<IamRole, String> retrievePolicyEmails(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
       throws InterruptedException {
-    return SamRetry.retry(
-        configurationService,
-        () -> retrievePolicyEmailsInner(userReq, iamResourceType, resourceId));
-  }
-
-  private Map<IamRole, String> retrievePolicyEmailsInner(
-      AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
-      throws ApiException {
-    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
-    try (Stream<AccessPolicyResponseEntryV2> resultStream =
-        samResourceApi
-            .listResourcePoliciesV2(iamResourceType.toString(), resourceId.toString())
-            .stream()) {
-      return resultStream.collect(
-          Collectors.toMap(
-              a -> IamRole.fromValue(a.getPolicyName()), AccessPolicyResponseEntryV2::getEmail));
-    }
+    var policies = retrievePolicies(userReq, iamResourceType, resourceId);
+    return policies.stream()
+        .collect(Collectors.toMap(p -> IamRole.fromValue(p.getName()), SamPolicyModel::getEmail));
   }
 
   @Override
-  public PolicyModel addPolicyMember(
+  public void addPolicyMember(
       AuthenticatedUserRequest userReq,
       IamResourceType iamResourceType,
       UUID resourceId,
-      String policyName,
+      IamRole policy,
       String userEmail)
       throws InterruptedException {
     SamRetry.retry(
         configurationService,
-        () -> addPolicyMemberInner(userReq, iamResourceType, resourceId, policyName, userEmail));
-    return SamRetry.retry(
-        configurationService,
-        () -> retrievePolicy(userReq, iamResourceType, resourceId, policyName));
+        () -> addPolicyMemberInner(userReq, iamResourceType, resourceId, policy, userEmail));
   }
 
   private void addPolicyMemberInner(
       AuthenticatedUserRequest userReq,
       IamResourceType iamResourceType,
       UUID resourceId,
-      String policyName,
+      IamRole policy,
       String userEmail)
       throws ApiException {
     ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
@@ -602,38 +586,35 @@ public class SamIam implements IamProviderInterface {
         "addUserPolicy resourceType {} resourceId {} policyName {} userEmail {}",
         iamResourceType.toString(),
         resourceId.toString(),
-        policyName,
+        policy,
         userEmail);
     samResourceApi.addUserToPolicyV2(
-        iamResourceType.toString(), resourceId.toString(), policyName, userEmail, null);
+        iamResourceType.toString(), resourceId.toString(), policy.toString(), userEmail, null);
   }
 
   @Override
-  public PolicyModel deletePolicyMember(
+  public void deletePolicyMember(
       AuthenticatedUserRequest userReq,
       IamResourceType iamResourceType,
       UUID resourceId,
-      String policyName,
+      IamRole policy,
       String userEmail)
       throws InterruptedException {
     SamRetry.retry(
         configurationService,
-        () -> deletePolicyMemberInner(userReq, iamResourceType, resourceId, policyName, userEmail));
-    return SamRetry.retry(
-        configurationService,
-        () -> retrievePolicy(userReq, iamResourceType, resourceId, policyName));
+        () -> deletePolicyMemberInner(userReq, iamResourceType, resourceId, policy, userEmail));
   }
 
   private void deletePolicyMemberInner(
       AuthenticatedUserRequest userReq,
       IamResourceType iamResourceType,
       UUID resourceId,
-      String policyName,
+      IamRole policy,
       String userEmail)
       throws ApiException {
     ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     samResourceApi.removeUserFromPolicyV2(
-        iamResourceType.toString(), resourceId.toString(), policyName, userEmail);
+        iamResourceType.toString(), resourceId.toString(), policy.toString(), userEmail);
   }
 
   private PolicyModel retrievePolicy(
@@ -995,6 +976,54 @@ public class SamIam implements IamProviderInterface {
     ResourcesApi samResourceApi = samApiService.resourcesApi(accessToken);
     return samResourceApi.listResourceChildren(
         parentIamResourceType.toString(), parentId.toString());
+  }
+
+  @Override
+  public boolean getPolicyPublicV2(
+      String accessToken, IamResourceType iamResourceType, UUID resourceId, String policyName)
+      throws InterruptedException {
+    return SamRetry.retry(
+        configurationService,
+        () -> getPolicyPublicV2Inner(accessToken, iamResourceType, resourceId, policyName));
+  }
+
+  private boolean getPolicyPublicV2Inner(
+      String accessToken, IamResourceType resourceType, UUID resourceId, String policyName)
+      throws ApiException {
+    ResourcesApi samResourceApi = samApiService.resourcesApi(accessToken);
+    return samResourceApi.getPolicyPublicV2(
+        resourceType.getSamResourceName(), resourceId.toString(), policyName);
+  }
+
+  @Override
+  public void setPolicyPublicV2(
+      String accessToken,
+      IamResourceType iamResourceType,
+      UUID resourceId,
+      String policyName,
+      boolean setPublic)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService,
+        () ->
+            setPolicyPublicV2Inner(
+                accessToken, iamResourceType, resourceId, policyName, setPublic));
+  }
+
+  private void setPolicyPublicV2Inner(
+      String accessToken,
+      IamResourceType resourceType,
+      UUID resourceId,
+      String policyName,
+      boolean setPublic)
+      throws ApiException {
+    ResourcesApi samResourceApi = samApiService.resourcesApi(accessToken);
+    // for this endpoint, Sam requires the policy name to be lower case
+    samResourceApi.setPolicyPublicV2(
+        resourceType.getSamResourceName(),
+        resourceId.toString(),
+        policyName.toLowerCase(),
+        setPublic);
   }
 
   /**
